Updated HTML, fixed desktop spacing/alignment for layout

--- a/styles/sass/_footer.scss
+++ b/styles/sass/_footer.scss
@@ -1,7 +1,7 @@
 footer {
 	@include text-shadow();
 	margin-top: 100px;
-  padding: 50px;
+  padding: 30px;
   width: 100%;
 	border-top: 8px solid $tertiary-color;
 	display: flex;
@@ -20,7 +20,8 @@ footer {
 }
 
 .nasa {
-	font-size: 1.5rem;
+	font-size: 1rem;
+	font-style: italic;
 	width: 60%;
 	line-height: 2rem;
 }
