--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -1,14 +1,14 @@
 header {
 	padding: 150px 0 100px;
-	width: 62%;
+	width: 55%;
 }
 
 .current-day-container {
-	height: 30%;
-	min-height: 300px;
+	height: 200px;
 }
 
 .heading-container h1 {
+	display: inline-block;
 	font-size: 3rem;
 	font-family: $secondary-font;
 	font-weight: 600;
@@ -84,6 +84,7 @@ header p {
 	border-radius: 5px;
 	margin-top: 50px;
 	width: 100%;
+	height: 300px;
 	img {
 		object-fit: cover;
 		border-radius: 5px;
