--- a/styles/sass/_media-queries.scss
+++ b/styles/sass/_media-queries.scss
@@ -1,7 +1,3 @@
-@media (max-width: 800px) {
-
-}
-
 @media (max-width: 768px) {
 	.wrapper {
 		flex-direction: column;
