--- a/styles/sass/_modal.scss
+++ b/styles/sass/_modal.scss
@@ -9,7 +9,7 @@
 .apod-container {
 	color: $secondary-color;
 	background: rgb(255,255,255);
-	width: 80%;
+	width: 60%;
 	display:flex;
 	flex-direction: column;
 	align-items: center;
@@ -26,7 +26,7 @@
 		justify-content: flex-end;
 		width: 100%;
 		.exit {
-			font-size: 2rem;
+			font-size: 2.5rem;
 			transition: color .35s;
 			margin-bottom: 20px;
 			&:hover,
@@ -46,6 +46,9 @@
 	}
 	h3 {
 		font-size: 2rem;
+		font-weight: 700;
+		border-bottom: 3px solid $tertiary-color;
+		padding-bottom: 5px;
 		font-family: $secondary-font;
 		margin-bottom: 20px;
 		text-align: center;
